package lk.sdcms.model;

public enum PaymentStatus {
    PENDING,
    PAID,
    REFUNDED
}
